cmake_minimum_required(VERSION 3.16)
project(luogu)

set(CMAKE_CXX_STANDARD 11)

add_executable(P1037 P1037.cpp)
add_executable(P1308 P1308.cpp)
add_executable(P1015 P1015.cpp)
add_executable(P2239 P2239.cpp)
add_executable(P1104 P1104.cpp)
add_executable(P1022 P1022.cpp)
add_executable(P1009 P1009.cpp)
add_executable(P1058 P1058.cpp)

add_executable(P3379 P3379.cpp)